--- a/details6.html
+++ b/details6.html
@@ -10,6 +10,7 @@
     <!-- Main Templet CSS File  -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+
     <link rel="stylesheet" class="js-color-style" href="css/colors/color-2.css" />
     <!-- Render All Elements Normally  -->
     <link rel="stylesheet" href="css/normalize.css" />
@@ -22,26 +23,18 @@
         <nav class="nav container">
             <a href="index.html" class="nav-logo">
                 <i class="fas fa-user-secret nav-logo-icon"></i>
-                <p> Scammer For Sale</p>
+                <span>Scammer For Sale</span>
             </a>
-            <div class="nav-menu" id="nav-menu">
-                <ul class="nav-items" id="nav-items">
-                    <li class="item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="item"><a class="nav-link" href="shop.html">Shop</a></li>
-                    <li class="item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
+            <ul class="nav-items">
+                <li class="item"><a class="nav-link active-link" href="index.html">Home</a></li>
+                <li class="item"><a class="nav-link" href="shop.html">Shop</a></li>
+                <li class="item"><a class="nav-link" href="about.html">About</a></li>
+                <li class="item"><a class="nav-link" href="contact.html">Contact</a></li>
+            </ul>
             <div class="nav-btns">
-                <div class="login-toggle" id="login-toggle">
-                    <i class="fas fa-user"></i>
-                </div>
-                <div class="cart-shop" id="cart-shop">
-                    <i class="fas fa-shopping-cart"></i>
-                </div>
-                <div class="nav-toggle" id="nav-toggle">
-                    <i id="icon-toggel" class="fas fa-bars"></i>
-                </div>
+                <button class="button login-toggle" id="login-toggle"><i class="fas fa-user"></i></button>
+                <button class="button cart-shop" id="cart-shop"><i class="fas fa-shopping-cart"></i></button>
+                <button class="button nav-toggle" id="nav-toggle"><i id="icon-toggel" class="fas fa-bars"></i></button>
             </div>
         </nav>
     </header>
@@ -171,7 +164,7 @@
                     </div>
                 </div>
                 <div class="product-info">
-                    <p class="details-subtitle">Slaves > Rakesh</p>
+                    <p class="details-subtitle">Scammers > Rakesh</p>
                     <h3 class="details-title">Rakesh</h3>
                     <div class="rating">
                         <i class="fas fa-star"></i>
@@ -219,7 +212,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket2.png" alt="New">
                         <h3 class="new-title">Rajesh</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$2458</span>
@@ -233,7 +226,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/short.png" alt="New">
                         <h3 class="new-title">Rakesh</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$4788</span>
@@ -247,7 +240,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket3.png" alt="New">
                         <h3 class="new-title">Sanjay</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$6294</span>
@@ -261,7 +254,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/h.png" alt="New">
                         <h3 class="new-title">Amir</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$5541</span>
@@ -275,7 +268,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket4.png" alt="New">
                         <h3 class="new-title">Ramesh</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$9999</span>
@@ -289,7 +282,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/jeans.png" alt="New">
                         <h3 class="new-title">Raju</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$2031</span>
