--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket2.png" alt="New">
                         <h3 class="new-title">Rajesh</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$2458</span>
@@ -262,7 +262,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/short.png" alt="New">
                         <h3 class="new-title">Rakesh</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$4788</span>
@@ -276,7 +276,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket3.png" alt="New">
                         <h3 class="new-title">Sanjay</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$6294</span>
@@ -290,7 +290,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/h.png" alt="New">
                         <h3 class="new-title">Amir</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$5541</span>
@@ -304,7 +304,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/Jacket4.png" alt="New">
                         <h3 class="new-title">Ramesh</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$9999</span>
@@ -318,7 +318,7 @@
                         <div class="new-tag">New</div>
                         <img class="new-img" src="imgs/jeans.png" alt="New">
                         <h3 class="new-title">Raju</h3>
-                        <span class="new-subtitle">Slave</span>
+                        <span class="new-subtitle">Scammer</span>
 
                         <div class="new-prices">
                             <span class="new-price">$2031</span>
