--- a/shop/3.html
+++ b/shop/3.html
@@ -6,29 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scammer For Sale</title>
-    <link rel="icon" href="imgs/fa-user-secret.svg" type="image/svg+xml">
+    <link rel="icon" href="../imgs/fa-user-secret.svg" type="image/svg+xml">
     <!-- Main Templet CSS File  -->
-    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" class="js-color-style" href="css/colors/color-2.css" />
+    <link rel="stylesheet" href="../css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" class="js-color-style" href="../css/colors/color-2.css" />
     <!-- Render All Elements Normally  -->
-    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
     <!-- font awsome -->
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="../css/all.min.css">
 </head>
 
 <body>
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="index.html" class="nav-logo">
+            <a href="../index.html" class="nav-logo">
                 <i class="fas fa-user-secret nav-logo-icon"></i>
                 <span>Scammer For Sale</span>
             </a>
             <ul class="nav-items">
-                <li class="item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="item"><a class="nav-link active-link" href="shop.html">Shop</a></li>
-                <li class="item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="item"><a class="nav-link" href="contact.html">Contact</a></li>
+                <li class="item"><a class="nav-link" href="../index.html">Home</a></li>
+                <li class="item"><a class="nav-link active-link" href="../shop.html">Shop</a></li>
+                <li class="item"><a class="nav-link" href="../about.html">About</a></li>
+                <li class="item"><a class="nav-link" href="../contact.html">Contact</a></li>
             </ul>
             <div class="nav-btns">
                 <button class="button login-toggle" id="login-toggle"><i class="fas fa-user"></i></button>
@@ -44,7 +44,7 @@
         <div class="cart-container">
             <article class="cart-card">
                 <div class="cart-box">
-                    <img class="cart-img" src="imgs/h.png" alt="">
+                    <img class="cart-img" src="../imgs/h.png" alt="">
                 </div>
                 <div class="cart-details">
                     <h3 class="cart-title-center">Amir</h3>
@@ -65,7 +65,7 @@
             </article>
             <article class="cart-card">
                 <div class="cart-box">
-                    <img class="cart-img" src="imgs/Jacket2.png" alt="">
+                    <img class="cart-img" src="../imgs/Jacket2.png" alt="">
                 </div>
                 <div class="cart-details">
                     <h3 class="cart-title-center">Rajesh</h3>
@@ -86,7 +86,7 @@
             </article>
             <article class="cart-card">
                 <div class="cart-box">
-                    <img class="cart-img" src="imgs/short.png" alt="">
+                    <img class="cart-img" src="../imgs/short.png" alt="">
                 </div>
                 <div class="cart-details">
                     <h3 class="cart-title-center">Rakesh</h3>
@@ -194,7 +194,7 @@
 
                         <div class="filter">
                             <input type="checkbox" name="" id="">
-                            <p>Mens</p><span>(6)</span>
+                            <p>Mens</p><span>(0)</span>
                         </div>
                         <div class="filter">
                             <input type="checkbox" name="" id="">
@@ -202,7 +202,7 @@
                         </div>
                         <div class="filter">
                             <input type="checkbox" name="" id="">
-                            <p>Minors</p><span>(0)</span>
+                            <p>Minors</p><span>(6)</span>
                         </div>
                     </div>
                     <!-- 4 -->
@@ -228,7 +228,7 @@
 
                         <div class="filter">
                             <input type="checkbox" name="" id="">
-                            <p>Scammer</p><span>(6)</span>
+                            <p>Scammer</p><span>(0)</span>
                         </div>
                         <div class="filter">
                             <input type="checkbox" name="" id="">
@@ -236,7 +236,7 @@
                         </div>
                         <div class="filter">
                             <input type="checkbox" name="" id="">
-                            <p>Child Labour</p><span>(0)</span>
+                            <p>Child Labour</p><span>(6)</span>
                         </div>
                     </div>
                     <!--  -->
@@ -246,97 +246,97 @@
                     <!-- 1 -->
                     <div class="shop-content">
                         <div class="tag">New</div>
-                        <img class="shop-img" src="imgs/Jacket3.png" alt="">
-                        <h3 class="shop-title">Sanjay</h3>
-                        <span class="shop-subtitle">Scammer</span>
+                        <img class="shop-img" src="../imgs/c1.png" alt="">
+                        <h3 class="shop-title">Luna</h3>
+                        <span class="shop-subtitle">Minors</span>
                         <div class="shop-prices">
                             <span class="shop-price">$6294</span>
                             <span class="shop-discount">$6700</span>
                         </div>
-                        <a class="button shop-button" href="details.html">
+                        <a class="button shop-button" href="details13.html">
                             <i class="fas fa-shopping-cart shop-icon"></i>
                         </a>
                     </div>
                     <!-- 2 -->
                     <div class="shop-content">
                         <div class="tag">New</div>
-                        <img class="shop-img" src="imgs/Jacket4.png" alt="">
-                        <h3 class="shop-title">Ramesh</h3>
-                        <span class="shop-subtitle">Scammer</span>
+                        <img class="shop-img" src="../imgs/c2.png" alt="">
+                        <h3 class="shop-title">Isabelle</h3>
+                        <span class="shop-subtitle">Minors</span>
                         <div class="shop-prices">
                             <span class="shop-price">$9999</span>
                             <span class="shop-discount"></span>
                         </div>
-                        <a class="button shop-button" href="details2.html">
+                        <a class="button shop-button" href="details14.html">
                             <i class="fas fa-shopping-cart shop-icon"></i>
                         </a>
                     </div>
                     <!-- 3 -->
                     <div class="shop-content">
                         <div class="tag">New</div>
-                        <img class="shop-img" src="imgs/Jacket2.png" alt="">
-                        <h3 class="shop-title">Rajesh</h3>
-                        <span class="shop-subtitle">Scammer</span>
+                        <img class="shop-img" src="../imgs/c3.png" alt="">
+                        <h3 class="shop-title">Lucas</h3>
+                        <span class="shop-subtitle">Minors</span>
                         <div class="shop-prices">
                             <span class="shop-price">$2458</span>
                             <span class="shop-discount">$3000</span>
                         </div>
-                        <a class="button shop-button" href="details3.html">
+                        <a class="button shop-button" href="details15.html">
                             <i class="fas fa-shopping-cart shop-icon"></i>
                         </a>
                     </div>
                     <!-- 4 -->
                     <div class="shop-content">
                         <div class="tag">New</div>
-                        <img class="shop-img" src="imgs/jeans.png" alt="">
-                        <h3 class="shop-title">Raju</h3>
-                        <span class="shop-subtitle">Scammer</span>
+                        <img class="shop-img" src="../imgs/c4.png" alt="">
+                        <h3 class="shop-title">Levi</h3>
+                        <span class="shop-subtitle">Minors</span>
                         <div class="shop-prices">
                             <span class="shop-price">$2031</span>
                             <span class="shop-discount">$ 2500</span>
                         </div>
-                        <a class="button shop-button" href="details4.html">
+                        <a class="button shop-button" href="details16.html">
                             <i class="fas fa-shopping-cart shop-icon"></i>
                         </a>
                     </div>
                     <!--5 -->
                     <div class="shop-content">
                         <div class="tag">New</div>
-                        <img class="shop-img" src="imgs/h.png" alt="">
-                        <h3 class="shop-title">Amir</h3>
-                        <span class="shop-subtitle">Scammer</span>
+                        <img class="shop-img" src="../imgs/c5.png" alt="">
+                        <h3 class="shop-title">Ava</h3>
+                        <span class="shop-subtitle">Minors</span>
                         <div class="shop-prices">
                             <span class="shop-price">$5541</span>
                             <span class="shop-discount">$6000</span>
                         </div>
-                        <a class="button shop-button" href="details5.html">
+                        <a class="button shop-button" href="details17.html">
                             <i class="fas fa-shopping-cart shop-icon"></i>
                         </a>
                     </div>
                     <!-- 6 -->
                     <div class="shop-content">
                         <div class="tag">New</div>
-                        <img class="shop-img" src="imgs/short.png" alt="">
-                        <h3 class="shop-title">Rakesh</h3>
-                        <span class="shop-subtitle">Scammer</span>
+                        <img class="shop-img" src="../imgs/c6.png" alt="">
+                        <h3 class="shop-title">Liam</h3>
+                        <span class="shop-subtitle">Minors</span>
                         <div class="shop-prices">
                             <span class="shop-price">$4788</span>
                             <span class="shop-discount">$5000</span>
                         </div>
-                        <a class="button shop-button" href="details6.html">
+                        <a class="button shop-button" href="details18.html">
                             <i class="fas fa-shopping-cart shop-icon"></i>
                         </a>
                     </div>
                 </div>
             </div>
-         <div class="pagination">
-                <a class="pagination-link" aria-label="Previous Page"><i class="fas fa-chevron-left"></i></a>
-                <span class="current">1</span>
-                <a href="shop/2.html" class="pagination-link">2</a>
-                <a href="shop/3.html" class="pagination-link">3</a>
+            <div class="pagination">
+                <a href="2.html" class="pagination-link" aria-label="Previous Page"><i class="fas fa-chevron-left"></i></a>
+                <a href="../shop.html" class="pagination-link">1</a>
+                <a href="2.html" class="pagination-link">2</a>
+                <span class="current">3</span>
                 <span>&middot; &middot;</span>
                 <span>9</span>
-                <a href="shop/2.html" class="pagination-link" aria-label="Next Page"><i class="fas fa-chevron-right"></i></a>
+                <a  class="pagination-link" aria-label="Next Page"><i class="fas fa-chevron-right"></i></a>
             </div>
         </section>
     </div>
@@ -353,7 +353,7 @@
         <div class="footer-container container grid">
             <!-- FOOTER CONTENT 1 -->
             <div class="footer-content">
-                <a href="index.html" class="footer-logo">
+                <a href="../index.html" class="footer-logo">
                     <i class="fas fa-user-secret footer-logo-icon"></i>
                     <p> Scammer For Sale</p>
                 </a>
@@ -369,7 +369,7 @@
             <div class="footer-content">
                 <h3 class="footer-title">About</h3>
                 <ul class="footer-links">
-                    <li><a class="footer-link" href="about.html">About Us</a></li>
+                    <li><a class="footer-link" href="../about.html">About Us</a></li>
                     <li><a class="footer-link" href="">Customer Support</a></li>
                     <li><a class="footer-link" href="">Support Center</a></li>
                 </ul>
@@ -378,7 +378,7 @@
             <div class="footer-content">
                 <h3 class="footer-title">Our Services</h3>
                 <ul class="footer-links">
-                    <li><a class="footer-link" href="shop.html">Shop</a></li>
+                    <li><a class="footer-link" href="../shop.html">Shop</a></li>
                     <li><a class="footer-link" href="">Discount</a> </li>
                     <li><a class="footer-link" href="">Shipping Mode</a></li>
                 </ul>
@@ -390,7 +390,7 @@
                 <ul class="footer-links">
                     <li><a class="footer-link" href="">Register</a></li>
                     <li><a class="footer-link" href="">Contact Us</a></li>
-                    <li><a class="footer-link" href="about.html">About Us</a></li>
+                    <li><a class="footer-link" href="../about.html">About Us</a></li>
                 </ul>
             </div>
         </div>
@@ -432,8 +432,8 @@
 
     <!-- ################## END STYLE SWITCHER  ############ -->
 
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/swiper-bundle.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
