--- a/shop/3.html
+++ b/shop/3.html
@@ -236,7 +236,7 @@
                         </div>
                         <div class="filter">
                             <input type="checkbox" name="" id="">
-                            <p>Child Labour</p><span>(6)</span>
+                            <p>Factory Worker</p><span>(6)</span>
                         </div>
                     </div>
                     <!--  -->
@@ -248,7 +248,7 @@
                         <div class="tag">New</div>
                         <img class="shop-img" src="../imgs/c1.png" alt="">
                         <h3 class="shop-title">Luna</h3>
-                        <span class="shop-subtitle">Minors</span>
+                        <span class="shop-subtitle">Factory Worker</span>
                         <div class="shop-prices">
                             <span class="shop-price">$6294</span>
                             <span class="shop-discount">$6700</span>
@@ -262,7 +262,7 @@
                         <div class="tag">New</div>
                         <img class="shop-img" src="../imgs/c2.png" alt="">
                         <h3 class="shop-title">Isabelle</h3>
-                        <span class="shop-subtitle">Minors</span>
+                        <span class="shop-subtitle">Factory Worker</span>
                         <div class="shop-prices">
                             <span class="shop-price">$9999</span>
                             <span class="shop-discount"></span>
@@ -276,7 +276,7 @@
                         <div class="tag">New</div>
                         <img class="shop-img" src="../imgs/c3.png" alt="">
                         <h3 class="shop-title">Lucas</h3>
-                        <span class="shop-subtitle">Minors</span>
+                        <span class="shop-subtitle">Factory Worker</span>
                         <div class="shop-prices">
                             <span class="shop-price">$2458</span>
                             <span class="shop-discount">$3000</span>
@@ -290,7 +290,7 @@
                         <div class="tag">New</div>
                         <img class="shop-img" src="../imgs/c4.png" alt="">
                         <h3 class="shop-title">Levi</h3>
-                        <span class="shop-subtitle">Minors</span>
+                        <span class="shop-subtitle">Factory Worker/span>
                         <div class="shop-prices">
                             <span class="shop-price">$2031</span>
                             <span class="shop-discount">$ 2500</span>
@@ -304,7 +304,7 @@
                         <div class="tag">New</div>
                         <img class="shop-img" src="../imgs/c5.png" alt="">
                         <h3 class="shop-title">Ava</h3>
-                        <span class="shop-subtitle">Minors</span>
+                        <span class="shop-subtitle">Factory Worker</span>
                         <div class="shop-prices">
                             <span class="shop-price">$5541</span>
                             <span class="shop-discount">$6000</span>
@@ -318,7 +318,7 @@
                         <div class="tag">New</div>
                         <img class="shop-img" src="../imgs/c6.png" alt="">
                         <h3 class="shop-title">Liam</h3>
-                        <span class="shop-subtitle">Minors</span>
+                        <span class="shop-subtitle">Factory Worker</span>
                         <div class="shop-prices">
                             <span class="shop-price">$4788</span>
                             <span class="shop-discount">$5000</span>
