--- a/shop/2.html
+++ b/shop/2.html
@@ -236,7 +236,7 @@
                         </div>
                         <div class="filter">
                             <input type="checkbox" name="" id="">
-                            <p>Child Labour</p><span>(0)</span>
+                            <p>Factory Worker</p><span>(0)</span>
                         </div>
                     </div>
                     <!--  -->
