--- a/shop/3.html
+++ b/shop/3.html
@@ -290,7 +290,7 @@
                         <div class="tag">New</div>
                         <img class="shop-img" src="../imgs/c4.png" alt="">
                         <h3 class="shop-title">Levi</h3>
-                        <span class="shop-subtitle">Factory Worker/span>
+                        <span class="shop-subtitle">Factory Worker</span>
                         <div class="shop-prices">
                             <span class="shop-price">$2031</span>
                             <span class="shop-discount">$ 2500</span>
